@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-07-09" />
+<meta name="date" content="2010-08-10" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-07-09</td></tr>
+<td>2010-08-10</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.20</td></tr>
 </tbody>
@@ -3827,22 +3827,14 @@ and the status bar.</td>
 Also reshows the document statistics line
 (after a short timeout).</td>
 </tr>
-<tr><td>Switch to Scribble</td>
-<td>F6</td>
-<td>Switches to scribble widget.</td>
-</tr>
-<tr><td>Switch to VTE</td>
-<td>F4</td>
-<td>Switches to VTE widget.</td>
-</tr>
 <tr><td>Switch to Search Bar</td>
 <td>F7</td>
 <td>Switches to the search bar in the toolbar (if
 visible).</td>
 </tr>
-<tr><td>Switch to Sidebar</td>
+<tr><td>Switch to Message Window</td>
 <td>&nbsp;</td>
-<td>Focus the Sidebar.</td>
+<td>Focus the Message Window's current tab.</td>
 </tr>
 <tr><td>Switch to Compiler</td>
 <td>&nbsp;</td>
@@ -3852,18 +3844,26 @@ visible).</td>
 <td>&nbsp;</td>
 <td>Focus the Messages message window tab.</td>
 </tr>
-<tr><td>Switch to Message Window</td>
-<td>&nbsp;</td>
-<td>Focus the Message Window's current tab.</td>
+<tr><td>Switch to Scribble</td>
+<td>F6</td>
+<td>Switches to scribble widget.</td>
 </tr>
-<tr><td>Switch to Sidebar Document List</td>
+<tr><td>Switch to VTE</td>
+<td>F4</td>
+<td>Switches to VTE widget.</td>
+</tr>
+<tr><td>Switch to Sidebar</td>
 <td>&nbsp;</td>
-<td>Focus the Document list tab in the Sidebar
-(if visible).</td>
+<td>Focus the Sidebar.</td>
 </tr>
 <tr><td>Switch to Sidebar Symbol List</td>
 <td>&nbsp;</td>
 <td>Focus the Symbol list tab in the Sidebar
+(if visible).</td>
+</tr>
+<tr><td>Switch to Sidebar Document List</td>
+<td>&nbsp;</td>
+<td>Focus the Document list tab in the Sidebar
 (if visible).</td>
 </tr>
 </tbody>
@@ -6143,7 +6143,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-07-09 15:38 UTC.
+Generated on: 2010-08-11 11:54 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
